--- a/Styles.CSS
+++ b/Styles.CSS
@@ -356,6 +356,12 @@ p {
     box-shadow: 0 5px 20px rgba(0, 0, 0, 0.3);
 }
 
+span{
+    color: #61b752;
+    font-family: 'Montserrat', sans-serif;
+    display: block;
+}
+
 footer {
     background: linear-gradient(to right, #1b1b1b, #383838);
     color: white;
