--- a/Styles1.CSS
+++ b/Styles1.CSS
@@ -48,41 +48,58 @@ h1{
 }
 /* For larger screens */
 .container {
-    max-width: 1200px;
-    margin: 0 auto;
-  }
-  
-.row {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+  margin: 40px;
 }
   
 .card {
-    width: 43%;
-    margin-bottom: 4%;
-    background: #1C1C1C;
-    color: #fff;
-    border-radius: 15px;
-    overflow: hidden;
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+  background-color: #1C1C1C;;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  border-radius: 14px;
+  overflow: hidden;
+  width: 44%;
+  height: 620px;
+  margin-bottom: 20px;
+  transition: all 0.3s ease-in-out;
 }
 
-/* Equal spaces between 2 cards and sides */
-.card:nth-child(2n+1) {
-    margin-right: 2%;
+.card:hover {
+  transform: translateY(-10px);
+  box-shadow: 0px 8px 12px rgba(0, 0, 0, 0.2);
+}
+ 
+  .image {
+    height: 420px;
+    width: 100%;
+    overflow: hidden;
+    background-color: #f0f0f0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
-  .card:nth-child(2n) {
-    margin-left: 2%;
+
+  .image img {
+    height: 100%;
+    max-width: 100%;
+    object-fit: cover;
   }
-  
-.card img {
+
+ .card img {
     width: 100%;
     height: auto;
+ }
+ .card .image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
-  
+
 .card .info {
     padding: 10px;
+    color: #fff;
 }
   
 .card .title {
@@ -112,21 +129,8 @@ h1{
 }
 /* Media Queries */
 @media only screen and (max-width: 768px) {
-    .container {
-        padding: 0 28px;
-    }
-    .row {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        margin: 0 -10px;
-    }
-    .card {
-        width: 100%;
-        margin: 10px;
-    }
-    .card:nth-of-type(4) {
-        margin-bottom: 80px; /* create a larger bottom space */
-    }
+  .card {
+    width: 100%;
+    margin: 1rem 0;
+  }
 }
-
