--- a/Styles1.CSS
+++ b/Styles1.CSS
@@ -130,6 +130,7 @@ h1{
 /* Media Queries */
 @media only screen and (max-width: 768px) {
   .card {
+    height: auto;  
     width: 100%;
     margin: 1rem 0;
   }
